Js via tag - function

--- a/Aula - 09/index.html
+++ b/Aula - 09/index.html
@@ -9,5 +9,11 @@
     <body>
         <!-- Js inline -->
         <button onclick="alert('Olá mundo')">Clique aqui</button>
+        <button onclick="msng()">Clique aqui 2</button>
+        <script>
+            function msng(){
+                window.alert("Olá mundo via function");
+            }
+        </script>
     </body>
 </html>
