Variaveis Var ou Let

--- a/Aula - 09/index.html
+++ b/Aula - 09/index.html
@@ -34,5 +34,6 @@
             }
         </script>
         <script src="./js/index.js"></script>
+        <script src="./js/variables.js"></script>
     </body>
 </html>
