--- a/Aula - 09/index.html
+++ b/Aula - 09/index.html
@@ -34,6 +34,7 @@
             }
         </script>
         <script src="./js/index.js"></script>
+        <script src="./js/estruturaControle.js"></script>
         <script src="./js/variables.js"></script>
     </body>
 </html>
