--- a/Aula - 10 - Seletores/index.html
+++ b/Aula - 10 - Seletores/index.html
@@ -25,7 +25,7 @@
         <h1>Utilizando o DOM</h1>
         <p class="texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita aperiam, repudiandae suscipit nam sequi earum a quaerat rerum saepe temporibus ipsum dolor aliquam quo similique velit magnam alias, quidem nobis?</p>
         <button id="botao">Pressionar</button>
-        <div class="textoInicio"></div>
+        <div id="textoInicio"></div>
         <script src="./Js/index.js"></script>
     </section>
 </body>
