--- a/Aula - 11 Js events/index.html
+++ b/Aula - 11 Js events/index.html
@@ -20,7 +20,24 @@
     </style>
 </head>
     <body>
+        <h3>Event out and on</h3>
         <div id="minha_div1"><p>Minha div</p></div>
+        <hr>
+        <h3>Eventos com inputs</h3>
+        <input type="text" name="" id="entrada" placeholder="Passando texto">
+        <br>
+        <input type="entrada2" name="" id="entrada" placeholder="Passando texto">
+
+        <br>
+        <br>
+        <hr>
+        <h3>Exemplo com submit</h3>
+        <form action="" id="myform">
+            <input type= "text" name="" id="ent_nome" placeholder="Digite o seu nome">
+            <button type="submit">
+                Enviar
+            </button>
+        </form>
         <script src="./js/index.js"></script>
     </body>
 </html>
